--- a/assets/chitiettourshtml/quangbinh.html
+++ b/assets/chitiettourshtml/quangbinh.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi Tiết Tour Quảng Bình</title>
-    <link rel="stylesheet" href="../chitiettours.css">
+    <link rel="stylesheet" href="../../assets/chitiettours.css">
 </head>
 <body>
     <header class="header">
