--- a/tours.html
+++ b/tours.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Travel Tours</title>
-    <link rel="stylesheet" href="../css/tours.css">
+    <link rel="stylesheet" href="css/tours.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="tour">
             <div class="tour-item">
-                <img src="../images/imgtours/DaLat.png" alt="Tour Đà Lạt">
+                <img src="images/imgtours/DaLat.png" alt="Tour Đà Lạt">
                 <h3>Tour Đà Lạt</h3>
                 <p>Khám phá thiên đường hoa và khí hậu mát mẻ.</p>
                 <div class="tour-info">
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/PhuQuoc.jpg" alt="Tour Phú Quốc">
+                <img src="images/imgtours/PhuQuoc.jpg" alt="Tour Phú Quốc">
                 <h3>Tour Phú Quốc</h3>
                 <p>Thưởng thức biển xanh, cát trắng, nắng vàng.</p>
                 <div class="tour-info">
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/HaNoi.jpg" alt="Tour Hà Nội">
+                <img src="images/imgtours/HaNoi.jpg" alt="Tour Hà Nội">
                 <h3>Tour Hà Nội</h3>
                 <p>Trải nghiệm văn hóa và ẩm thực miền Bắc.</p>
                 <div class="tour-info">
@@ -62,7 +62,7 @@
         </div>
         <div class="tour">
             <div class="tour-item">
-                <img src="../images/imgtours/Sapa.jpg" alt="Tour Sapa">
+                <img src="images/imgtours/Sapa.jpg" alt="Tour Sapa">
                 <h3>Tour Sapa</h3>
                 <p>Tham quan vùng đất sương mù và ruộng bậc thang.</p>
                 <div class="tour-info">
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/NhaTrang.jpg" alt="Tour Nha Trang">
+                <img src="images/imgtours/NhaTrang.jpg" alt="Tour Nha Trang">
                 <h3>Tour Nha Trang</h3>
                 <p>Thưởng thức không khí biển và các trò chơi nước vô cùng hấp dẫn.</p>
                 <div class="tour-info">
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/DaNang.jpg" alt="Tour Đà Nẵng">
+                <img src="images/imgtours/DaNang.jpg" alt="Tour Đà Nẵng">
                 <h3>Tour Hội An</h3>
                 <p>Khám phá phố cổ và những con đèn lồng rực rỡ cùng với bãi cát trắng mịn.</p>
                 <div class="tour-info">
@@ -109,7 +109,7 @@
         </div>
         <div class="tour">
             <div class="tour-item">
-                <img src="../images/imgtours/ConDao.png" alt="Tour Côn Đảo">
+                <img src="images/imgtours/ConDao.png" alt="Tour Côn Đảo">
                 <h3>Tour Côn Đảo</h3>
                 <p>Khám phá thiên đường hoang sơ và di tích lịch sử.</p>
                 <div class="tour-info">
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/HaLong.jpg" alt="Tour Hạ Long">
+                <img src="images/imgtours/HaLong.jpg" alt="Tour Hạ Long">
                 <h3>Tour Hạ Long</h3>
                 <p>Tham quan Vịnh Hạ Long - Di sản thiên nhiên thế giới.</p>
                 <div class="tour-info">
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/PhanThiet.jpg" alt="Tour Phan Thiết">
+                <img src="images/imgtours/PhanThiet.jpg" alt="Tour Phan Thiết">
                 <h3>Tour Phan Thiết</h3>
                 <p>Khám phá những bãi biển tuyệt đẹp và đồi cát Mũi Né.</p>
                 <div class="tour-info">
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtrangchu/QuyNhon.jpg" alt="Tour Quy Nhơn">
+                <img src="images/imgtrangchu/QuyNhon.jpg" alt="Tour Quy Nhơn">
                 <h3>Tour Quy Nhơn</h3>
                 <p>Khám phá thành phố biển đầy nắng gió và lịch sử hào hùng.</p>
                 <div class="tour-info">
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/QuangBinh.jpg" alt="Tour Quảng Bình">
+                <img src="images/imgtours/QuangBinh.jpg" alt="Tour Quảng Bình">
                 <h3>Tour Quảng Bình</h3>
                 <p>Khám phá hang động kỳ vĩ và những bãi biển hoang sơ.</p>
                 <div class="tour-info">
@@ -203,7 +203,7 @@
         </div>
         <div class="tour">
             <div class="tour-item">
-                <img src="../images/imgtours/Singapore.jpg" alt="Tour Singapore">
+                <img src="images/imgtours/Singapore.jpg" alt="Tour Singapore">
                 <h3>Tour Singapore</h3>
                 <p>Khám phá thành phố hiện đại và những biểu tượng nổi tiếng.</p>
                 <div class="tour-info">
@@ -218,7 +218,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/ThaiLan.webp" alt="Tour Thái Lan">
+                <img src="images/imgtours/ThaiLan.webp" alt="Tour Thái Lan">
                 <h3>Tour Thái Lan</h3>
                 <p>Khám phá đất nước chùa vàng với văn hóa phong phú.</p>
                 <div class="tour-info">
@@ -233,7 +233,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/HanQuoc.jpg" alt="Tour Hàn Quốc">
+                <img src="images/imgtours/HanQuoc.jpg" alt="Tour Hàn Quốc">
                 <h3>Tour Hàn Quốc</h3>
                 <p>Khám phá văn hóa truyền thống và hiện đại của xứ sở Kim Chi.</p>
                 <div class="tour-info">
@@ -250,7 +250,7 @@
         </div>
         <div class="tour">
             <div class="tour-item">
-                <img src="../images/imgtours/NhatBan.jpg" alt="Tour Nhật Bản">
+                <img src="images/imgtours/NhatBan.jpg" alt="Tour Nhật Bản">
                 <h3>Tour Nhật Bản</h3>
                 <p>Chiêm ngưỡng mùa hoa anh đào và văn hóa truyền thống.</p>
                 <div class="tour-info">
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/ChauAu.jpg" alt="Tour Châu Âu">
+                <img src="images/imgtours/ChauAu.jpg" alt="Tour Châu Âu">
                 <h3>Tour Châu Âu</h3>
                 <p>Khám phá các thành phố lãng mạn và di sản thế giới.</p>
                 <div class="tour-info">
@@ -280,7 +280,7 @@
                 </div>
             </div>
             <div class="tour-item">
-                <img src="../images/imgtours/Uc.jpg" alt="Tour Úc">
+                <img src="images/imgtours/Uc.jpg" alt="Tour Úc">
                 <h3>Tour Úc</h3>
                 <p>Khám phá thiên nhiên độc đáo và những thành phố hiện đại.</p>
                 <div class="tour-info">
