--- a/assets/chitiettourshtml/hanoi.html
+++ b/assets/chitiettourshtml/hanoi.html
@@ -42,7 +42,7 @@
                     
                 </li>
                 <li class="attraction-item">
-                    <img src="../img/VanMieuHN.jpg" alt="Văn Miếu Quốc Tử Giám">
+                    <img src="../img/VanMieuQTGHN.jpg" alt="Văn Miếu Quốc Tử Giám">
                     <strong>Văn Miếu Quốc Tử Giám:</strong> Được xây dựng vào cuối thế kỷ XI ở phía Nam Kinh thành Thăng Long.
                     
                 </li>
