--- a/assets/chitiettourshtml/thailan.html
+++ b/assets/chitiettourshtml/thailan.html
@@ -40,7 +40,7 @@
             <h2>Điểm Tham Quan Nổi Bật</h2>
             <ul>
                 <li class="attraction-item">
-                    <img src="../img/chuaphatngocTHAI.jpg" alt="Chùa Phật Ngọc (Wat Phra Kaew)">
+                    <img src="../img/chuaphatngocSING.jpg" alt="Chùa Phật Ngọc (Wat Phra Kaew)">
                     <strong>Chùa Phật Ngọc (Wat Phra Kaew)</strong> 
                     
                 </li>
