--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </div>
         <div class="slideshow-container">
             <div class="slide">
-                <img src="./images/imgtrangchu/QuyNhon.jpg" alt="Image 1">
+                <img src="../images/imgtrangchu/QuyNhon.jpg" alt="Image 1">
             </div>
             <div class="slide">
-                <img src="./images/imgtours/ChauAu.jpg" alt="Image 2">
+                <img src="../images/imgtours/ChauAu.jpg" alt="Image 2">
             </div>
             <div class="slide">
-                <img src="./images/imgtours/Singapore.jpg" alt="Image 3">
+                <img src="../images/imgtours/Singapore.jpg" alt="Image 3">
             </div>
         </div>
         <section class="search-bar">
