--- a/about.html
+++ b/about.html
@@ -20,6 +20,6 @@
         </p>
         <button id="learnMore">Tìm Hiểu Thêm</button>
     </section>
-    <script src="../js/about.js"></script>
+    <script src="js/about.js"></script>
 </body>
 </html>
