--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                 <textarea name="message" rows="5" placeholder="Nội dung liên hệ"></textarea>
                 <button type="submit">Gửi Thông Tin</button>
             </form>
-            <script src="../js/contact.js"></script>        
+            <script src="js/contact.js"></script>        
         </div>
     </div>
 </body>
